--- a/styles/postlist.css
+++ b/styles/postlist.css
@@ -2,19 +2,17 @@ body {
     font-family: Arial, sans-serif;
     margin: 0;
     padding: 0;
-    background-image: url('../images/background.jpg');
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
+    background-color: #FFEEDD;
 }
 
 header {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 10px 20px;
-    background-color: rgba(248, 248, 248, 0.8);
-    border-bottom: 1px solid #ddd;
+    padding: 5px 10px 20px;
 }
 
 #logo h1 {
@@ -37,22 +35,6 @@ header {
     padding: 10px 20px;
     cursor: pointer;
     margin-left: 10px;
-}
-
-#center-buttons {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 80vh;
-}
-
-#center-buttons button {
-    background-color: yellow;
-    color: black;
-    border: none;
-    padding: 10px 20px;
-    cursor: pointer;
-    margin: 5px;
 }
 
 /* Modal styles */
@@ -195,62 +177,51 @@ header {
     text-decoration: underline;
 }
 
-/* Form Styling */
-#createPostForm {
-    display: flex;
-    flex-direction: column;
-    padding: 10px;
+.card {
+    background-color: white;
+    border-radius: 10px;
+    padding: 20px;
+    margin: 20px;
 }
 
-#createPostForm label {
-    margin-bottom: 3px;
-    text-align: left;
-    width: 100%;
+.card:hover {
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+}
+
+.card-header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-bottom: 10px;
+}
+.card-header h3 {
+    padding: 10px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+.card-header .icon {
+    font-size: 1.2rem;
+    color: #ccc;
+}
+
+.card-header .icon:hover {
+    color: red;
+    cursor: pointer;
+}
+
+.card-content {
+    line-height: 1.5;
+    font-size: 1rem;
+}
+
+.card-content .icon:hover {
+    color: blue;
+    cursor: pointer;
+}
+
+.author {
     font-weight: bold;
     margin-top: 10px;
 }
 
-#createPostForm input[type="text"],
-#createPostForm textarea {
-    width: 98%;
-    padding: 5px;
-    margin-bottom: 10px;
-    border: 1px solid #ccc;
-    border-radius: 5px;
-    background-color: rgb(245, 245, 245);
-}
-
-#createPostForm textarea {
-    height: 250px; /* Adjust height as needed */
-    resize: vertical; /* Allow vertical resizing */
-}
-
-#createPostForm input[type="submit"] {
-    margin: 0 auto;
-    width: 50%;
-    height: 40px;
-    background-color: #4CAF50;
-    color: #fff;
-    border: none;
-    border-radius: 5px;
-    cursor: pointer;
-    margin-top: 10px;
-}
-
-#createPostForm input[type="submit"]:hover {
-    background-color: #3e8e41;
-}
-
-/* Modal Styling */
-.modal {
-    display: none;
-    position: fixed;
-    z-index: 1;
-    left: 0;
-    top: 0;
-    width: 100%;
-    height: 100%;
-    overflow: auto;
-    background-color: rgb(0, 0, 0);
-    background-color: rgba(0, 0, 0, 0.4);
-}
