--- a/styles/index.css
+++ b/styles/index.css
@@ -1,256 +1,89 @@
 body {
-    font-family: Arial, sans-serif;
-    margin: 0;
-    padding: 0;
-    background-image: url('../images/background.jpg');
-    background-size: cover;
+    background: url('../images/background.jpg');
     background-position: center;
-    background-repeat: no-repeat;
+    background-size: cover;
 }
 
-header {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 10px 20px;
-    background-color: rgba(248, 248, 248, 0.8);
-    border-bottom: 1px solid #ddd;
+.header-container {
+    height: 100%;
+    width: 100%;
 }
 
-#logo h1 {
-    font-family: 'Montez', cursive;
-    color: blue;
-    font-size: 36px;
-    margin: 0;
-}
-
-#logo h2 {
-    font-family: 'Ubuntu Mono', monospace;
-    font-size: 18px;
-    margin: 0;
-}
-
-#auth-buttons button {
-    background-color: blue;
-    color: white;
-    border: none;
-    padding: 10px 20px;
-    cursor: pointer;
-    margin-left: 10px;
-}
-
-#center-buttons {
+.post-buttons-container {
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 80vh;
+    top: 50%;
+    width: 100%;
+    position: absolute;
 }
 
-#center-buttons button {
-    background-color: yellow;
-    color: black;
-    border: none;
-    padding: 10px 20px;
+.post-button {
+    font-size: 16px;
+    background: #CFB53B;
+    color: #000000;
+    font-family: Arial, Helvetica, sans-serif;
+    padding: 10px;
     cursor: pointer;
-    margin: 5px;
+    width: 125px;
+    margin: 0 10px;
 }
 
-/* Modal styles */
-.modal {
-    display: none;
-    position: fixed;
-    z-index: 1;
-    left: 0;
-    top: 0;
-    width: 50%;
-    height: 50%;
-    overflow: auto;
-    background-color: rgb(0, 0, 0);
-    background-color: rgba(0, 0, 0, 0.4);
+.post-button:hover {
+    color: #fff;
+    background: #3366cc;
 }
 
-/* Modal Content/Box */
-.modal-content {
-    background-color: #fefefe;
-    margin: 15% auto; /* 15% from the top and centered */
-    padding: 20px;
-    border: 1px solid #888;
-    width: 50%; /* Could be more or less, depending on screen size */
-    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-    -webkit-animation-name: animatetop;
-    -webkit-animation-duration: 0.4s;
-    animation-name: animatetop;
-    animation-duration: 0.4s;
+.new-post-modal-content {
+    width: 80%;
 }
 
-.modal-heading {
-    display: inline-block;
-    padding-bottom: 5px;
-    margin-bottom: 20px;
-    font-size: 24px;
+.new-post-modal-textarea {
+    height: 40vh;
+    font-family: Arial;
 }
 
-/* Apply exit animation */
-.modal-content.exit {
-    -webkit-animation-name: exittop;
-    animation-name: exittop;
+.new-post-modal-btn {
+    width: 120px;
+    align-self: center;
 }
 
-/* Modal enter animation */
-@-webkit-keyframes animatetop {
-    from { top: -300px; opacity: 0; }
-    to { top: 0; opacity: 1; }
-}
-
-@keyframes animatetop {
-    from { top: -300px; opacity: 0; }
-    to { top: 0; opacity: 1; }
-}
-
-/* Modal exit animation */
-@-webkit-keyframes exittop {
-    from { top: 0; opacity: 1; }
-    to { top: -300px; opacity: 0; }
-}
-
-@keyframes exittop {
-    from { top: 0; opacity: 1; }
-    to { top: -300px; opacity: 0; }
-}
-
-/* The Close Button */
-.close {
-    color: #aaa;
-    float: right;
-    font-size: 28px;
+.new-post-body {
+    position: relative;
+    width: 70%;
+    margin: 1% auto auto auto;
+    text-align: left;
+    background-color: #fff;
+    font-family: 'Abel', sans-serif;
     font-weight: bold;
+    background-color: rgba(0, 0, 0, 0.7);
+    background-color: #fff;
 }
 
-.close:hover,
-.close:focus {
+.close-btn-new-post-dialog {
+    position: absolute;
+    right: 20px;
+    /* top: 10px; */
+    font-size: 40px;
+    font-weight: bold;
     color: #000;
+}
+
+.close-btn-new-post-dialog:hover,
+.close-btn-new-post-dialog:focus {
+    color: #f44336;
+    cursor: pointer;
+}
+
+#newPostModal a {
     text-decoration: none;
-    cursor: pointer;
+    font-size: 36px;
+    color: #818181;
+    display: block;
+    transition: 0.3s;
 }
 
-/* Form styles */
-#signUpForm,
-#signInForm {
-    display: flex;
-    flex-direction: column;
-    padding: 20px;
-}
-
-#signUpForm label,
-#signInForm label {
-    margin-bottom: 5px;
-    text-align: left;
-    width: 100%;
-    font-weight: bold;
-    margin-top: 10px;
-}
-
-#signUpForm input[type="text"],
-#signUpForm input[type="password"],
-#signInForm input[type="text"],
-#signInForm input[type="password"] {
-    width: 98%;
-    height: 40px;
-    padding: 10px;
-    margin-bottom: 5px;
-    border: 1px solid #ccc;
-    border-radius: 5px;
-    background-color: rgb(245, 245, 245);
-}
-
-#signUpForm input[type="submit"],
-#signInForm input[type="submit"] {
-    margin: 0 auto;
-    width: 50%;
-    height: 40px;
-    background-color: #4CAF50;
-    color: #fff;
-    border: none;
-    border-radius: 5px;
-    cursor: pointer;
-    margin-top: 10px;
-}
-
-#signUpForm input[type="submit"]:hover,
-#signInForm input[type="submit"]:hover {
-    background-color: #3e8e41;
-}
-
-#signInForm p {
-    margin-top: 15px;
-    text-align: center;
-}
-
-#signInForm p a {
-    color: #007BFF;
-    text-decoration: none;
-}
-
-#signInForm p a:hover {
-    text-decoration: underline;
-}
-
-/* Form Styling */
-#createPostForm {
-    display: flex;
-    flex-direction: column;
-    padding: 10px;
-}
-
-#createPostForm label {
-    margin-bottom: 3px;
-    text-align: left;
-    width: 100%;
-    font-weight: bold;
-    margin-top: 10px;
-}
-
-#createPostForm input[type="text"],
-#createPostForm textarea {
-    width: 98%;
-    padding: 5px;
-    margin-bottom: 10px;
-    border: 1px solid #ccc;
-    border-radius: 5px;
-    background-color: rgb(245, 245, 245);
-}
-
-#createPostForm textarea {
-    height: 250px; /* Adjust height as needed */
-    resize: vertical; /* Allow vertical resizing */
-}
-
-#createPostForm input[type="submit"] {
-    margin: 0 auto;
-    width: 50%;
-    height: 40px;
-    background-color: #4CAF50;
-    color: #fff;
-    border: none;
-    border-radius: 5px;
-    cursor: pointer;
-    margin-top: 10px;
-}
-
-#createPostForm input[type="submit"]:hover {
-    background-color: #3e8e41;
-}
-
-/* Modal Styling */
-.modal {
-    display: none;
-    position: fixed;
-    z-index: 1;
-    left: 0;
-    top: 0;
-    width: 100%;
-    height: 100%;
-    overflow: auto;
-    background-color: rgb(0, 0, 0);
-    background-color: rgba(0, 0, 0, 0.4);
+#newPostModal a:hover,
+.overlay a:focus {
+    color: #f1f1f1;
 }
