--- a/styles/postlist.css
+++ b/styles/postlist.css
@@ -1,227 +1,141 @@
+html,
 body {
-    font-family: Arial, sans-serif;
+    background: #ffeedd;
     margin: 0;
     padding: 0;
-    background-size: cover;
-    background-position: center;
-    background-repeat: no-repeat;
-    background-color: #FFEEDD;
-}
-
-header {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 5px 10px 20px;
-}
-
-#logo h1 {
-    font-family: 'Montez', cursive;
-    color: blue;
-    font-size: 36px;
-    margin: 0;
-}
-
-#logo h2 {
-    font-family: 'Ubuntu Mono', monospace;
-    font-size: 18px;
-    margin: 0;
-}
-
-#auth-buttons button {
-    background-color: blue;
-    color: white;
-    border: none;
-    padding: 10px 20px;
-    cursor: pointer;
-    margin-left: 10px;
-}
-
-/* Modal styles */
-.modal {
-    display: none;
-    position: fixed;
-    z-index: 1;
-    left: 0;
-    top: 0;
-    width: 50%;
-    height: 50%;
-    overflow: auto;
-    background-color: rgb(0, 0, 0);
-    background-color: rgba(0, 0, 0, 0.4);
-}
-
-/* Modal Content/Box */
-.modal-content {
-    background-color: #fefefe;
-    margin: 15% auto; /* 15% from the top and centered */
-    padding: 20px;
-    border: 1px solid #888;
-    width: 50%; /* Could be more or less, depending on screen size */
-    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-    -webkit-animation-name: animatetop;
-    -webkit-animation-duration: 0.4s;
-    animation-name: animatetop;
-    animation-duration: 0.4s;
-}
-
-.modal-heading {
-    display: inline-block;
-    padding-bottom: 5px;
-    margin-bottom: 20px;
-    font-size: 24px;
-}
-
-/* Apply exit animation */
-.modal-content.exit {
-    -webkit-animation-name: exittop;
-    animation-name: exittop;
-}
-
-/* Modal enter animation */
-@-webkit-keyframes animatetop {
-    from { top: -300px; opacity: 0; }
-    to { top: 0; opacity: 1; }
-}
-
-@keyframes animatetop {
-    from { top: -300px; opacity: 0; }
-    to { top: 0; opacity: 1; }
-}
-
-/* Modal exit animation */
-@-webkit-keyframes exittop {
-    from { top: 0; opacity: 1; }
-    to { top: -300px; opacity: 0; }
-}
-
-@keyframes exittop {
-    from { top: 0; opacity: 1; }
-    to { top: -300px; opacity: 0; }
-}
-
-/* The Close Button */
-.close {
-    color: #aaa;
-    float: right;
-    font-size: 28px;
-    font-weight: bold;
-}
-
-.close:hover,
-.close:focus {
-    color: #000;
-    text-decoration: none;
-    cursor: pointer;
-}
-
-/* Form styles */
-#signUpForm,
-#signInForm {
-    display: flex;
-    flex-direction: column;
-    padding: 20px;
-}
-
-#signUpForm label,
-#signInForm label {
-    margin-bottom: 5px;
-    text-align: left;
+    height: 100%;
     width: 100%;
-    font-weight: bold;
-    margin-top: 10px;
 }
 
-#signUpForm input[type="text"],
-#signUpForm input[type="password"],
-#signInForm input[type="text"],
-#signInForm input[type="password"] {
-    width: 98%;
-    height: 40px;
-    padding: 10px;
-    margin-bottom: 5px;
-    border: 1px solid #ccc;
-    border-radius: 5px;
-    background-color: rgb(245, 245, 245);
+.fa-trash:hover {
+    color: #c22;
 }
 
-#signUpForm input[type="submit"],
-#signInForm input[type="submit"] {
-    margin: 0 auto;
-    width: 50%;
-    height: 40px;
-    background-color: #4CAF50;
-    color: #fff;
-    border: none;
-    border-radius: 5px;
+.fa-ellipsis-h:hover {
+    color: #818181;
     cursor: pointer;
-    margin-top: 10px;
 }
 
-#signUpForm input[type="submit"]:hover,
-#signInForm input[type="submit"]:hover {
-    background-color: #3e8e41;
+.header-container {
+    width: 100%;
 }
 
-#signInForm p {
-    margin-top: 15px;
+.all-posts-container {
+    width: 100%;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
+    margin-top: 20px;
+}
+
+.post {
+    display: flex;
+    align-items: center;
+    width: 40%;
+    background: #fff;
+    box-shadow: 0 4px 10px 0 rgba(17, 4, 63, 0.2), 0 4px 20px 0 rgba(79, 19, 97, 0.19);
+    margin: 15px 0;
+    border-radius: 15px;
+}
+
+.post:hover {
+    box-shadow: 0 32px 64px 0 rgba(0, 0, 0, 0.2);
+}
+
+.post-username {
+    font-weight: bold;
+    color: #707070;
+    padding: 10px;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 16px;
     text-align: center;
 }
 
-#signInForm p a {
-    color: #007BFF;
-    text-decoration: none;
+.post-right {
+    height: 100%;
+    background-color: #E8E8E8;
+    color: #000000;
+    border-radius: 0 15px 15px 0;
+    padding: 0 20px;
 }
 
-#signInForm p a:hover {
-    text-decoration: underline;
+.post-right-header {
+    display: flex;
+    justify-content: space-between;
+    align-items: baseline;
+    padding: 10px 0;
 }
 
-.card {
-    background-color: white;
-    border-radius: 10px;
+.delete-btn {
+    color: #818181;
+    font-size: 15px;
+    cursor: pointer;
+}
+
+.post-title {
+    font-family: 'Abel', sans-serif;
+    color: #818181;
+    font-size: 19px;
+}
+
+.post-desc {
+    height: 55px;
+    overflow: hidden;
+    font-family: Helvetica, sans-serif;
+    font-size: 16px;
+}
+
+.post-more {
+    float: right;
+    cursor: pointer;
+    color: #818181;
+    padding: 10px 0;
+}
+
+.delete-post-modal {
+    display: none;
+    position: absolute;
+    z-index: 1;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    overflow: auto;
+    opacity: 1;
+    background-color: rgba(0, 0, 0, 0.8);
+}
+
+.delete-post-modal-content {
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
+    background-color: #fff;
+    width: 25%;
+    font-family: 'Abel', sans-serif;
     padding: 20px;
-    margin: 20px;
+    text-align: center;
 }
 
-.card:hover {
-    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+.delete-post-heading {
+    font-size: 18px;
+    color: #000;
+    padding-bottom: 20px;
 }
 
-.card-header {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    margin-bottom: 10px;
-}
-.card-header h3 {
-    padding: 10px;
+.delete-post-btns-container {
     display: flex;
     justify-content: space-between;
     align-items: center;
 }
-.card-header .icon {
-    font-size: 1.2rem;
-    color: #ccc;
+
+.confirm-delete-btn {
+    width: 80px;
+    align-self: right;
 }
 
-.card-header .icon:hover {
-    color: red;
-    cursor: pointer;
+.cancel-delete-btn {
+    width: 80px;
+    align-self: center;
+    background: #c22;
 }
-
-.card-content {
-    line-height: 1.5;
-    font-size: 1rem;
-}
-
-.card-content .icon:hover {
-    color: blue;
-    cursor: pointer;
-}
-
-.author {
-    font-weight: bold;
-    margin-top: 10px;
-}
-
