--- a/styles/index.css
+++ b/styles/index.css
@@ -32,6 +32,7 @@ body {
 .post-button:hover {
     color: #fff;
     background: #3366cc;
+    box-shadow: 0 0 10px #3366cc;
 }
 
 .new-post-modal-content {
