--- a/styles/common.css
+++ b/styles/common.css
@@ -81,6 +81,7 @@ html, body {
     font-family: 'Abel', sans-serif;
     padding: 20px;
     transition: transform 0.3s ease;
+    border-radius: 5px;
 }
 
 .modal-show {
